styles/components/_header-2036.scss
.content-header__container.header-2036 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items:center;
  padding: 40px 0 100px 0;
  text-align: center;
  //background: url("/public/images/2036-bg.jpg") no-repeat center bottom;
  background-size: cover !important;
  height: 100%;

  .header-inner-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    transition:
      transform math.div($main-carousel-transition-duration, 2) ease-in-out,
      opacity $main-carousel-transition-duration ease-in-out,
      max-width math.div($main-carousel-transition-duration, 2) ease-in-out,
      margin-left math.div($main-carousel-transition-duration, 2) ease-in-out;
    margin-left: 0;
    transform: translateX(0);
    //max-width: map-get($container-max-widths, lg);
    max-width: 100%;
    z-index: 2;

    .no_selected & {
      opacity: .3;
      max-width: 100%;

      .header-inner-content__text {
        max-width: 100%;
      }

    }

    // Ensure the transition of the O goes along with the slide transition speed.
    .is-transitioning & {
      @include media-breakpoint-up('md') {
        .header-inner-content__img {
          transition: left $main-carousel-transition-duration ease-in-out;
        }
      }
    }

    // .first & {
    //   margin-left: 0;
    //   transform: translateX(50px);

    //   @media (min-width: $round-image-size-big) {
    //     margin-left: calc(100% - #{$round-image-size-big});
    //     transform: translateX(100px);
    //   }
    // }

    // .last & {
    //   margin-left: 0;
    //   transform: translateX(-50px);

    //   @media (min-width: $round-image-size-big) {
    //     transform: translateX(-100px);
    //   }
    // }
  }

  .header-inner-content__img {
    z-index: 2;

    .image {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }

  .title {
    text-transform: uppercase;
    font-size: $font-size-xsm;
    letter-spacing: 0.2em;
    line-height: 1em;
    font-weight: bold;
    font-family: $font-family-sans-serif;

    @include media-breakpoint-up(xsm) {
      font-size: $font-size-sm;
      letter-spacing: 0.39em;
    }

    @include media-breakpoint-up(sm) {
      font-size: $font-size-base;
    }

    @include media-breakpoint-up(md) {
      font-size: $font-size-xxlg;
      white-space: nowrap;
    }

    @include media-breakpoint-up(lg) {
      font-size: $h4-font-size;
    }
  }

  .title_expanded {
    height: 0;
    opacity:0;
    font-size: $font-size-xlg;
    line-height: 1.1;
  }

  .title_cta {
    margin-top: 1.5rem;
    @include media-breakpoint-up(md) {
      margin-top: 3rem;
    }
  }

  .pretitle,
  .subtitle {
    &:empty {
      display: none;
    }
  }

  @keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  .actions {
    position: absolute;
    left: 0;
    bottom: 0;
    animation: fadeIn math.div($main-carousel-transition-duration, 6) ease-in-out;
    width: 100%;
    z-index: 2;
    //transition: opacity math.div($main-carousel-transition-duration, 3) ease-out;
  }

  .btn {
    margin-bottom: math.div($default-separation, 2);
    &.after-expand{
      display: none;
      .is-scrolled &{
        display: block;
      }
    }
    &.before-expand{
      .is-scrolled &{
        display: none;
      }
    }
  }
}

.header-2036__title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  top: 80px;
  width: 100%;
  z-index: 2;

  span {
    display: block;
    margin-bottom: 10px;

    @include media-breakpoint-up(sm) {
      margin-bottom: 20px;
    }
  }

  .header-2036__title__3 {
    margin-top: 120px;

    @include media-breakpoint-up(sm) {
      margin-top: 150px;
    }
  }

  svg {
    width: 55px;
    height: 80px;
    overflow: visible;

    path {
      filter:
        drop-shadow(-3px -3px 6px rgba(255, 255, 255, .5))
        drop-shadow(2px 2px 6px rgba(95, 92, 89, .12))
        drop-shadow(4px 4px 11px rgba(177, 167, 162, .4));
    }
  }

  @include media-breakpoint-up(sm) {
    top: 40px;

    svg {
      width: 62px;
      height: 88px;
    }
  }

  // Rotated mobile devices!!!
  @media (max-width: map-get($grid-breakpoints, 'md')) and (orientation: landscape) {
    flex-direction: row;
    top: auto;

    .header-2036__title__3 {
      margin-top: 0;
      margin-left: 120px;
    }


    > span {
      display: block;
      padding: 0 23px;
    }
  }

  @include media-breakpoint-up(md) {
    flex-direction: row;
    top: auto;
    bottom: 40%;

    > span {
      display: block;
      padding: 0 23px;
    }

    .header-2036__title__3 {
      margin: 0 0 0 330px;
    }

    svg {
      width: 135px;
      height: inherit;
    }
  }
}

// Scroll Animation

$pre-animation-delay: math.div($scroll-down-transition-duration, 2);

@keyframes flash {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

$curve: cubic-bezier(.63,.72,.79,.98);

.header-2036.content-header__container {
  transition: background $scroll-down-transition-duration ease-in-out;

  .header-inner-content__img {
    position: absolute;
    bottom: calc(100vh - 410px);
    max-width: unset;
    width: 100px;
    height: 100px;
    transform: none;
    box-sizing: content-box;
    z-index: 10;
    padding: 0;
    margin-bottom: 0;
    will-change: width, height;
    transition:
      width $scroll-down-transition-duration $pre-animation-delay $curve,
      height $scroll-down-transition-duration $pre-animation-delay $curve,
      $scroll-down-transition-duration $pre-animation-delay $curve,
      left $scroll-down-transition-duration $pre-animation-delay $curve,
      bottom $scroll-down-transition-duration $pre-animation-delay $curve,
      margin-bottom $scroll-down-transition-duration $pre-animation-delay $curve,
      transform $scroll-down-transition-duration $pre-animation-delay $curve,
      opacity $scroll-down-transition-duration $pre-animation-delay $curve;

    @include media-breakpoint-up(sm) {
      bottom: calc(100vh - 430px);
      width: 130px;
      height: 130px;
    }

    @include media-breakpoint-up(md) {
      left: calc((100vw / 2) - 230px);
      bottom: 36.9%;
      width: 258px;
      height: 258px;
    }

    // Rotated mobile devices!!!
    @media (max-width: map-get($grid-breakpoints, 'md')) and (orientation: landscape) {
      margin-left: -100px;
      margin-bottom: 0px;
      bottom: calc(50% - 60px);
    }

    video {
      position: absolute;
      display: block;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
      z-index:20;
    }
  }

  .header-inner-content__text {
    position: relative;
    padding-left: math.div($grid-gutter-width, 2);
    padding-right: math.div($grid-gutter-width, 2);
    padding-top: calc((80px * 3) + (10px * 3) + 120px + 80px); // letter_height * 3 + letter_margin_bottom * 3 + "O" margin offset +  offset from top.
    max-width: map-get($container-max-widths, 'lg');
    transition: padding-top $scroll-down-transition-duration * 1.5 ease;

    // Rotated mobiel devices!!
    @media (max-width: map-get($grid-breakpoints, 'md')) and (orientation: landscape) {
      padding-top: 250px !important;
    }

    @include media-breakpoint-up(sm) {
      padding-top: calc((88px * 3) + (20px * 3) + 150px + 40px); // letter_height * 3 + letter_margin_bottom * 3 + "O" margin offset +  offset from top.
    }

    @include media-breakpoint-up(lg) {
      padding-top: $round-image-size-medium;
    }

    @include media-breakpoint-up(xl) {
      padding-top: $round-image-size-medium;
    }
  }

  .title {
    transition: none;
  }

  .pretitle,
  .subtitle,
  .title_expanded {
    margin-bottom: 0;
    max-height: 0;
    opacity: 0;
    transition: opacity math.div($scroll-down-transition-duration, 2) ease-out,
                max-height math.div($scroll-down-transition-duration, 2) ease-out,
                margin math.div($scroll-down-transition-duration, 2) ease-out;
  }

  // ANIMATION ACTIVE
  &[data-animation="active"] {
    background: $body-bg !important;

    .header-inner-content {
      //overflow: hidden;
    }

    .header-2036__title {
      opacity: 0;
    }

    .header-inner-content__img {
      top: auto;
      width:110vw;
      height:110vw;
      bottom: -100px !important;
      margin-left: 0 !important;
      margin-bottom: 0 !important;
      z-index: -1;
      opacity: .5;

      @media (orientation: portrait) {
        width: 110vh;
        height: 110vh;
        left: auto;
      }

      @include media-breakpoint-up(md) {
        margin-bottom: 0;
        left: calc(-5vw - 12px - (15px / 2));
      }
    }

    .header-inner-content__text {
      padding-top: math.div($round-image-size + $default-separation, 5);
    }

    .title {
      animation: flash $scroll-down-transition-duration * 2;
      @extend .header-xlarge;
      line-height: 0.9em;
      letter-spacing: 0;
      white-space: normal;
    }

    .title_expanded {
      height: auto;
      max-height: 999px;
      opacity: 1;
      margin-bottom: 20px;
      display: block;
    }

    .pretitle,
    .subtitle {
      height: auto;
      max-height: 999px;
      opacity: 1;
    }

    .pretitle {
      margin-bottom: 15px;
    }

    video {
      pointer-events: none;
    }
  }
}

